--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
+<head>
+
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+    </style>
+</head>
+
 <body style="margin: 0;padding: 0;">
     <!-- red container div-->
     <div style="position:relative; display: inline-block;">
-        <div style="position:absolute; display: flex; width: 100%; align-items: center;">
-            <!-- player health -->
-            <div 
-                style="
-                background-color: yellow; 
-                height: 30px; 
+        <div style="position:absolute;
+                display: flex;
                 width: 100%;
-            "></div>
+                align-items: center;
+                padding: 20px;">
+            <!-- player health -->
+            <div style="position: relative; height: 30px; width: 100%; display: flex; justify-content: flex-end;">
+                <div 
+                    style="
+                    background-color: yellow; height: 30px; width: 100%;"
+                ></div> 
+                <div id ="playerHealth" style="position:absolute; background: blue; top:0; right: 0; bottom: 0; width: 100%;"></div>
+            </div>
             <!-- timer-->
             <div 
                 style="
@@ -18,13 +32,14 @@
                 flex-shrink: 0;
             "></div>
             <!-- Enemy bar -->
+            <div style="position: relative; height: 30px; width: 100%;">
             <div 
                 style="
-                background-color: yellow; 
-                height: 30px;
-                width: 100%;"
+                background-color: yellow; height: 30px;"
             ></div> 
-            <div></div>
+            <div id ="enemyHealth" style="position:absolute; background: blue; top:0; right: 0; bottom: 0; left: 0;"></div>
+        </div>
+        <div></div>
         </div>
         <canvas></canvas>
     </div>
