--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
             </div>
             <!-- timer-->
             <div 
+            id="timer"
                 style="
                 background-color: red;
                 width: 100px;
                 height: 100px;
                 flex-shrink: 0;
-            "></div>
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            ">10</div>
             <!-- Enemy bar -->
             <div style="position: relative; height: 30px; width: 100%;">
             <div 
@@ -40,6 +44,9 @@
             <div id ="enemyHealth" style="position:absolute; background: blue; top:0; right: 0; bottom: 0; left: 0;"></div>
         </div>
         <div></div>
+        </div>
+        <div id="win">
+            tie
         </div>
         <canvas></canvas>
     </div>
